# TraceMind

./: .env.example  .gitignore  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml  publish.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  schemas.py
backend/app/api/: auth.py  chat.py  conversations.py  ingestion.py
backend/app/core/: auth.py  cache.py  config.py  db.py  dependencies.py  observability.py  rabbitmq.py  session.py
backend/app/models/: __init__.py  base.py  conversation.py  enums.py  inference_log.py  message.py  token_usage.py  user.py
backend/app/sdk/: llm_wrapper.py  pii_redactor.py  telemetry.py
backend/app/worker/: ingestion_worker.py  models.py
backend/tests/: test_health.py
backend/tracemind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  AuthPage.tsx  ChatWindow.tsx  ConversationSidebar.tsx
frontend/src/lib/: api.ts  auth.ts  stream.ts  time.ts  types.ts
frontend/src/pages/: Intro.tsx
frontend/src/state/: app-context.tsx
grafana/dashboards/: api-monitoring.json  error-rates.json  llm-latency.json  placeholder.json  queue-health.json  throughput.json  token-usage.json  worker-ingestion.json
grafana/provisioning/dashboards/: dashboards.yml
(+8 files in other folders)
