[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemind-backend"
version = "0.1.0"
description = "Production-style LLM inference logging and ingestion system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.0.0",
  "aio-pika>=9.4.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "groq>=0.9.0",
  "openai>=1.30.0",
  "anthropic>=0.30.0",
  "psycopg2-binary>=2.9.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
